--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Experiment</string>
+    <string name="error_msg">Oops ! Une erreur est survenue, veuillez réessayer plus tard !</string>
     <string name="format_location">%1d km | %2d min </string>
 
     <string name="restaurant_schedules_prefix">Pour</string>
